--- a/pokemon.html
+++ b/pokemon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="pokemon.css">
+    <script src="./pokemon.js"></script>
 </head> 
 <body>
 
