update use api and dom

--- a/pokemon.html
+++ b/pokemon.html
@@ -9,7 +9,12 @@
 </head> 
 <body>
 
-<div class="card">
+<div id="pokemon-cards">
+
+
+
+</div>
+<!-- <div class="card">
     <h1>Nº150 - Mewtwo</h1>
         <div class="frame">
             <img class="image" src="./assets/150.png">
@@ -22,7 +27,7 @@
         <li class="item-atribute">Special-defense: 60</li>
         <li class="item-atribute">Speed: 50</li>
     </ul>
-</div>
+</div> -->
 
 
 
