update pokemon image

--- a/pokemon.html
+++ b/pokemon.html
@@ -27,8 +27,8 @@
         <li class="item-atribute">Special-defense: 60</li>
         <li class="item-atribute">Speed: 50</li>
     </ul>
-</div> -->
-
+</div>
+ -->
 
 
 
