--- a/pokemon.html
+++ b/pokemon.html
@@ -9,26 +9,29 @@
 </head> 
 <body>
 
-<div id="pokemon-cards">
+    <div id="pokemon-cards">
 
 
 
-</div>
-<!-- <div class="card">
-    <h1>Nº150 - Mewtwo</h1>
-        <div class="frame">
-            <img class="image" src="./assets/150.png">
-        </div>
-    <ul>
-        <li class="item-atribute">HP: 45</li>
-        <li class="item-atribute">Attack: 49 </li>
-        <li class="item-atribute">Defense: 49 </li>
-        <li class="item-atribute">Special-attack: 65</li>
-        <li class="item-atribute">Special-defense: 60</li>
-        <li class="item-atribute">Speed: 50</li>
-    </ul>
-</div>
- -->
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="card">
+        <h1>Nº150 - Mewtwo</h1>
+            <div class="frame">
+                <img class="image" src="./assets/150.png">
+            </div>
+        <ul>
+            <li class="item-atribute">HP: 45</li>
+            <li class="item-atribute">Attack: 49 </li>
+            <li class="item-atribute">Defense: 49 </li>
+            <li class="item-atribute">Special-attack: 65</li>
+            <li class="item-atribute">Special-defense: 60</li>
+            <li class="item-atribute">Speed: 50</li>
+        </ul>
+    </div>
+    
 
 
 
