update pokemon dom

--- a/pokemon.html
+++ b/pokemon.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href="pokemon.css">
     <script src="./pokemon.js"></script>
 </head> 
-<body>
-
-    <div id="pokemon-cards">
+<body id="pokemon">
 
 
-
-    </div>
     <br>
     <br>
     <br>
-    <div class="card">
+    <div class="card" style="background-color: brown;">
         <h1>Nº150 - Mewtwo</h1>
             <div class="frame">
                 <img class="image" src="./assets/150.png">
