update pokemon dom

--- a/pokemon.html
+++ b/pokemon.html
@@ -9,12 +9,10 @@
 </head> 
 <body id="pokemon">
 
+    <h2>Criado usando HTML e CSS puro</h2>
 
-    <br>
-    <br>
-    <br>
-    <div class="card" style="background-color: brown;">
-        <h1>Nº150 - Mewtwo</h1>
+    <div class="card">
+        <h3>Nº150 - Mewtwo</h3>
             <div class="frame">
                 <img class="image" src="./assets/150.png">
             </div>
@@ -28,9 +26,11 @@
         </ul>
     </div>
     
+    <br>
+    <br>
+    <br>
 
-
-
+    <h2>Criado usando Javascript (Manipulacao do DOM)</h2>
 
 
 
